@@ -17,11 +17,7 @@ package eu.cessda.pasc.oci.parser;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.github.fge.jackson.JsonLoader;
 import com.github.fge.jsonschema.core.exceptions.ProcessingException;
-import com.github.fge.jsonschema.core.report.ProcessingReport;
-import com.github.fge.jsonschema.main.JsonSchema;
-import com.github.fge.jsonschema.main.JsonSchemaFactory;
 import eu.cessda.pasc.oci.ResourceHandler;
 import eu.cessda.pasc.oci.configurations.Repo;
 import eu.cessda.pasc.oci.exception.IndexerException;
@@ -30,7 +26,6 @@ import eu.cessda.pasc.oci.mock.data.ReposTestData;
 import eu.cessda.pasc.oci.models.cmmstudy.CMMStudy;
 import lombok.extern.slf4j.Slf4j;
 import org.json.JSONException;
-import org.json.JSONObject;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -42,7 +37,6 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.TimeZone;
 
-import static org.assertj.core.api.Assertions.fail;
 import static org.assertj.core.api.BDDAssertions.then;
 import static org.skyscreamer.jsonassert.JSONAssert.assertEquals;
 
@@ -56,6 +50,7 @@ public class RecordXMLParserTest {
 
     private final Repo repo = ReposTestData.getUKDSRepo();
     private final ObjectMapper objectMapper = new ObjectMapper();
+    private final ParserTestUtilities utils = new ParserTestUtilities(objectMapper);
 
     // Class under test
     private final CMMStudyMapper cmmStudyMapper = new CMMStudyMapper();
@@ -75,9 +70,9 @@ public class RecordXMLParserTest {
         var result = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(result).hasSize(1);
-        validateCMMStudyResultAgainstSchema(result.get(0));
+        utils.validateCMMStudyResultAgainstSchema(result.getFirst());
 
-        String actualJson = objectMapper.writeValueAsString(result.get(0));
+        String actualJson = objectMapper.writeValueAsString(result.getFirst());
 
         // Check if the JSON generated differs from the expected source
         assertEquals(expectedJson, actualJson, true);
@@ -95,21 +90,21 @@ public class RecordXMLParserTest {
 
         then(optionalResult).hasSize(1);
 
-        var result = optionalResult.get(0);
+        var result = optionalResult.getFirst();
 
         // Verifies timeMeth extraction
         then(result.typeOfTimeMethods().size()).isEqualTo(2);
-        then(result.typeOfTimeMethods().get("fi").get(0).term()).isEqualTo("Pitkittäisaineisto: trendi/toistuva poikkileikkausaineisto");
-        then(result.typeOfTimeMethods().get("en").get(0).term()).isEqualTo("Longitudinal: Trend/Repeated cross-section");
+        then(result.typeOfTimeMethods().get("fi").getFirst().term()).isEqualTo("Pitkittäisaineisto: trendi/toistuva poikkileikkausaineisto");
+        then(result.typeOfTimeMethods().get("en").getFirst().term()).isEqualTo("Longitudinal: Trend/Repeated cross-section");
 
         // Verifies unitTypes extraction
         then(result.unitTypes().size()).isEqualTo(2);
-        then(result.unitTypes().get("fi").get(0).term()).isEqualTo("Henkilö");
-        then(result.unitTypes().get("en").get(0).term()).isEqualTo("Individual");
+        then(result.unitTypes().get("fi").getFirst().term()).isEqualTo("Henkilö");
+        then(result.unitTypes().get("en").getFirst().term()).isEqualTo("Individual");
     }
 
     @Test
-    public void shouldReturnValidCMMStudyRecordFromOaiPmhDDI2_5MetadataRecord() throws IOException, ProcessingException, JSONException, IndexerException, URISyntaxException {
+    public void shouldReturnValidCMMStudyRecordFromOaiPmhDDI2_5MetadataRecord() throws IOException, ProcessingException, IndexerException, URISyntaxException {
 
         // Given
         var recordXML = ResourceHandler.getResource("xml/ddi_2_5/ddi_record_1683.xml");
@@ -119,12 +114,12 @@ public class RecordXMLParserTest {
 
         // Then
         then(record).hasSize(1);
-        validateCMMStudyResultAgainstSchema(record.get(0));
+        utils.validateCMMStudyResultAgainstSchema(record.getFirst());
     }
 
     @Test
     @SuppressWarnings("PreferJavaTimeOverload")
-    public void shouldOnlyExtractSingleDateAsStartDateForRecordsWithASingleDateAttr() throws IOException, ProcessingException, JSONException, IndexerException, URISyntaxException {
+    public void shouldOnlyExtractSingleDateAsStartDateForRecordsWithASingleDateAttr() throws IOException, ProcessingException, IndexerException, URISyntaxException {
 
         // Given
         var recordXML = ResourceHandler.getResource("xml/ddi_2_5/ddi_record_1683.xml");
@@ -132,9 +127,9 @@ public class RecordXMLParserTest {
         // When
         var record = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
         then(record).hasSize(1);
-        validateCMMStudyResultAgainstSchema(record.get(0));
+        utils.validateCMMStudyResultAgainstSchema(record.getFirst());
         final ObjectMapper mapper = new ObjectMapper();
-        String jsonString = objectMapper.writeValueAsString(record.get(0));
+        String jsonString = objectMapper.writeValueAsString(record.getFirst());
         final JsonNode actualTree = mapper.readTree(jsonString);
 
         then(actualTree.get("dataCollectionPeriodStartdate").asText()).isEqualTo("1976-01-01T00:00:00Z");
@@ -151,7 +146,7 @@ public class RecordXMLParserTest {
 
         // When
         var record = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
-        String actualCmmStudyJsonString = objectMapper.writeValueAsString(record.get(0));
+        String actualCmmStudyJsonString = objectMapper.writeValueAsString(record.getFirst());
 
         // then
         assertEquals(expectedCmmStudyJsonString, actualCmmStudyJsonString, false);
@@ -159,7 +154,7 @@ public class RecordXMLParserTest {
 
     @Test
     @SuppressWarnings("PreferJavaTimeOverload")
-    public void shouldReturnCMMStudyRecordWithRepeatedAbstractConcatenated() throws IOException, ProcessingException, JSONException, IndexerException, URISyntaxException {
+    public void shouldReturnCMMStudyRecordWithRepeatedAbstractConcatenated() throws IOException, ProcessingException, IndexerException, URISyntaxException {
 
         Map<String, String> expectedAbstract = new HashMap<>();
         expectedAbstract.put("de", "de de");
@@ -172,14 +167,14 @@ public class RecordXMLParserTest {
         var record = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(record).hasSize(1);
-        then(record.get(0).abstractField().size()).isEqualTo(3);
-        then(record.get(0).abstractField()).isEqualTo(expectedAbstract);
-        validateCMMStudyResultAgainstSchema(record.get(0));
+        then(record.getFirst().abstractField().size()).isEqualTo(3);
+        then(record.getFirst().abstractField()).isEqualTo(expectedAbstract);
+        utils.validateCMMStudyResultAgainstSchema(record.getFirst());
     }
 
     @Test // https://github.com/cessda/cessda.cdc.versions/issues/135
     @SuppressWarnings("PreferJavaTimeOverload")
-    public void shouldReturnCMMStudyRecordWithOutParTitleWhenThereIsALangDifferentFromDefault() throws IOException, ProcessingException, JSONException, IndexerException, URISyntaxException {
+    public void shouldReturnCMMStudyRecordWithOutParTitleWhenThereIsALangDifferentFromDefault() throws IOException, ProcessingException, IndexerException, URISyntaxException {
 
         Map<String, String> expectedTitle = new HashMap<>();
         expectedTitle.put("en", "Machinery of Government, 1976-1977");
@@ -192,9 +187,9 @@ public class RecordXMLParserTest {
         var record = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(record).hasSize(1);
-        then(record.get(0).titleStudy().size()).isEqualTo(3);
-        then(record.get(0).titleStudy()).isEqualTo(expectedTitle);
-        validateCMMStudyResultAgainstSchema(record.get(0));
+        then(record.getFirst().titleStudy().size()).isEqualTo(3);
+        then(record.getFirst().titleStudy()).isEqualTo(expectedTitle);
+        utils.validateCMMStudyResultAgainstSchema(record.getFirst());
     }
 
     @Test()
@@ -233,22 +228,21 @@ public class RecordXMLParserTest {
         var result = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
 
         then(result).hasSize(1);
-        validateCMMStudyResultAgainstSchema(result.get(0));
-        assertThatCmmRequiredFieldsAreExtracted(result.get(0));
+        utils.validateCMMStudyResultAgainstSchema(result.getFirst());
+        assertThatCmmRequiredFieldsAreExtracted(result.getFirst());
     }
 
-    private void validateCMMStudyResultAgainstSchema(CMMStudy record) throws IOException, ProcessingException, JSONException {
-        String jsonString = objectMapper.writeValueAsString(record);
-        JSONObject json = new JSONObject(jsonString);
-        log.debug("RETRIEVED STUDY JSON: \n" + json.toString(4));
+    @Test
+    public void shouldHaveNullDataCollectionYearWhenRequiredFieldsAreNotPreset() throws FileNotFoundException, URISyntaxException, XMLParseException {
 
-        JsonNode jsonNodeRecord = JsonLoader.fromString(jsonString);
-        final JsonSchema schema = JsonSchemaFactory.byDefault().getJsonSchema("resource:/json/schema/CMMStudy.schema.json");
+        // Given
+        var recordXML = ResourceHandler.getResource("xml/ddi_2_5/ddi_record_ukds_example.xml");
 
-        ProcessingReport validate = schema.validate(jsonNodeRecord);
-        if (!validate.isSuccess()) {
-            fail("Validation not successful : " + validate);
-        }
+        // When
+        var result = new RecordXMLParser(cmmStudyMapper).getRecord(repo, Path.of(recordXML.toURI()));
+
+        then(result).hasSize(1);
+        then(result.get(0).dataCollectionYear()).isNull();
     }
 
     private void assertThatCmmRequiredFieldsAreExtracted(CMMStudy record) throws IOException, JSONException {
@@ -265,7 +259,7 @@ public class RecordXMLParserTest {
     }
 
     @Test
-    public void shouldOverrideGlobalLanguageDefaultIfAPerRepositoryOverrideIsSpecified() throws IOException, ProcessingException, JSONException, IndexerException, URISyntaxException {
+    public void shouldOverrideGlobalLanguageDefaultIfAPerRepositoryOverrideIsSpecified() throws IOException, ProcessingException, IndexerException, URISyntaxException {
 
         var repository = ReposTestData.getUKDSLanguageOverrideRepository();
 
@@ -276,10 +270,10 @@ public class RecordXMLParserTest {
         var result = new RecordXMLParser(cmmStudyMapper).getRecord(repository, Path.of(recordXML.toURI()));
 
         then(result).hasSize(1);
-        validateCMMStudyResultAgainstSchema(result.get(0));
+        utils.validateCMMStudyResultAgainstSchema(result.getFirst());
 
         // Assert the language is as expected
-        Assert.assertNotNull(result.get(0).titleStudy().get("zz"));
+        Assert.assertNotNull(result.getFirst().titleStudy().get("zz"));
     }
 
     @Test
@@ -294,10 +288,10 @@ public class RecordXMLParserTest {
         then(result).hasSize(2);
 
         for (var study : result) {
-            validateCMMStudyResultAgainstSchema(study);
+            utils.validateCMMStudyResultAgainstSchema(study);
         }
 
-        var actualJson = objectMapper.writeValueAsString(result.get(0));
+        var actualJson = objectMapper.writeValueAsString(result.getFirst());
 
         // Check if the JSON for the first study differs from the expected source
         assertEquals(expectedJson, actualJson, true);
